--- a/config/deploy/system.site.yml
+++ b/config/deploy/system.site.yml
@@ -1,7 +1,7 @@
 uuid: f4543550-d17a-4ac0-9798-efe6aff4aeef
-name: Site-Install
-mail: admin@example.com
-slogan: ''
+name: EEN
+mail: ludovic.gouzille@aerian.com
+slogan: 'Enterprise Europe Netowork'
 page:
   403: ''
   404: ''
