--- a/config/deploy/field.storage.node.field_image.yml
+++ b/config/deploy/field.storage.node.field_image.yml
@@ -1,4 +1,4 @@
-uuid: 4fd6394a-148f-43b1-82dc-7879ccda4ca2
+uuid: 515aa1d3-1efd-44c8-8fa4-bb91895581d3
 langcode: en
 status: true
 dependencies:
@@ -6,8 +6,6 @@ dependencies:
     - file
     - image
     - node
-_core:
-  default_config_hash: SkXIPKZYiIMMtnBmfnxk58RYfbZ8cHSw5NZPY_JByME
 id: node.field_image
 field_name: field_image
 entity_type: node
@@ -15,7 +13,7 @@ type: image
 settings:
   uri_scheme: public
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
@@ -27,8 +25,6 @@ module: image
 locked: false
 cardinality: 1
 translatable: true
-indexes:
-  target_id:
-    - target_id
+indexes: {  }
 persist_with_no_fields: false
 custom_storage: false
