--- a/config/deploy/node.type.article.yml
+++ b/config/deploy/node.type.article.yml
@@ -1,12 +1,19 @@
 uuid: ef600451-06c2-4eba-a943-496ace49f043
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: i4OVV5qrD7abstl4SKS8v5Ee7PuxrL548iZVSty1HRg
-name: Article
+name: News
 type: article
-description: 'Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
+description: 'Use <em>news</em> for time-sensitive content.'
 help: ''
 new_revision: false
 preview_mode: 1
