--- a/config/deploy/system.theme.global.yml
+++ b/config/deploy/system.theme.global.yml
@@ -2,7 +2,7 @@ favicon:
   mimetype: image/png
   path: 'public://favicon_0.png'
   url: ''
-  use_default: false
+  use_default: true
 features:
   comment_user_picture: true
   comment_user_verification: true
@@ -11,6 +11,6 @@ features:
 logo:
   path: 'public://een_logo_0.png'
   url: ''
-  use_default: false
+  use_default: true
 _core:
   default_config_hash: 9rAU4Pku7eMBQxauQqAgjzlcicFZ2As6zEa6zvTlCB8
