--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "composer/installers": "^1.0.21",
         "wikimedia/composer-merge-plugin": "~1.3",
-        "drupal/elasticsearch_connector": "2.x-dev"
+        "drupal/elasticsearch_connector": "2.x-dev",
+        "drupal/search_api": "1.x-dev"
     },
     "replace": {
         "drupal/core": "~8.1"
