--- a/elasticsearch/composer.json
+++ b/elasticsearch/composer.json
@@ -5,8 +5,8 @@
     "license": "BSD-3-Clause",
     "autoload": {
         "psr-4": {
-            "Data\\": "module/Data/src",
-            "DataTest\\": "module/Data/test"
+            "Console\\": "module/Console/src",
+            "ConsoleTest\\": "module/Console/test"
         }
     },
     "keywords": [
