--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -7,7 +7,8 @@
         "composer/installers": "^1.0.21",
         "wikimedia/composer-merge-plugin": "~1.3",
         "drupal/elasticsearch_connector": "2.x-dev",
-        "drupal/search_api": "1.x-dev"
+        "drupal/search_api": "1.x-dev",
+        "zendframework/zend-http": "^2.5"
     },
     "replace": {
         "drupal/core": "~8.1"
@@ -34,7 +35,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer"
+            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer",
+            "Elastic\\": "sites/all/librairies/Elastica-master/lib/Elastica/"
         }
     },
     "scripts": {
