--- a/drupal/modules/custom/opportunity_search/opportunity_search.routing.yml
+++ b/drupal/modules/custom/opportunity_search/opportunity_search.routing.yml
@@ -2,6 +2,6 @@ opportunity_search.form:
  path: '/opportunity/search'
  defaults:
    _title: 'Opportunity Search'
-   _form: '\Drupal\opportunity_search\Form\OpportunityForm'
+   _controller: '\Drupal\opportunity_search\Controller\OpportunityController::content'
  requirements:
    _permission: 'access content'
