--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -5,10 +5,7 @@
     "license": "GPL-2.0+",
     "require": {
         "composer/installers": "^1.0.21",
-        "wikimedia/composer-merge-plugin": "~1.3",
-        "drupal/elasticsearch_connector": "2.x-dev",
-        "drupal/search_api": "1.x-dev",
-        "zendframework/zend-http": "^2.5"
+        "wikimedia/composer-merge-plugin": "~1.3"
     },
     "replace": {
         "drupal/core": "~8.1"
@@ -35,8 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer",
-            "Elastic\\": "sites/all/librairies/Elastica-master/lib/Elastica/"
+            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer"
         }
     },
     "scripts": {
@@ -44,11 +40,5 @@
         "post-autoload-dump": "Drupal\\Core\\Composer\\Composer::ensureHtaccess",
         "post-package-install": "Drupal\\Core\\Composer\\Composer::vendorTestCodeCleanup",
         "post-package-update": "Drupal\\Core\\Composer\\Composer::vendorTestCodeCleanup"
-    },
-    "repositories": {
-        "drupal": {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
     }
 }
