Adding opportunity list page and call to elastic search api

--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -1,7 +1,14 @@
-opportunities.form:
+opportunities.search:
  path: '/opportunities/search'
  defaults:
-   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::form'
+   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::search'
+ requirements:
+   _permission: 'access content'
+
+opportunities.results:
+ path: '/opportunities'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::results'
  requirements:
    _permission: 'access content'
 
