--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "een",
-  "version": "0.1.0",
-  "devDependencies": {
-    "grunt": "~1.0.1",
-    "grunt-contrib-sass": "~1.0.0"
+  "main": "Gulpfile.js",
+  "dependencies": {
+    "gulp": "~3.9.1",
+    "gulp-sass": "~2.3.2"
   }
 }
