--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -33,7 +33,10 @@
     },
     "autoload": {
         "psr-4": {
-            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer"
+            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer",
+            "Drupal\\Tests\\": "core/tests/Drupal/Tests",
+            "Drupal\\elastic_search\\": "modules/custom/elastic_search/src",
+            "Drupal\\opportunities\\": "modules/custom/opportunities/src"
         }
     },
     "scripts": {
