EEN-15: Update deployment script

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ atlassian-ide-plugin.xml
 ##############
 ##   NODE   ##
 ##############
-node_modules/*
+node_modules
 .sass-cache/
 
 ##############
