--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ## PHPSTORM ##
 ##############
 
-.idea/*
+.idea/
 .idea_modules/
 *.iws
 atlassian-ide-plugin.xml
@@ -23,7 +23,9 @@ node_modules
 ##############
 ##  DRUPAL  ##
 ##############
+cache/
 /drupal/themes/custom/een/css/*.css
 /drupal/core/composer.lock
 /drupal/core/vendor
 /drupal/vendor
+drupal/modules/custom/elastic_search/config/install/elastic_search.settings.yml
