--- a/drupal/.htaccess
+++ b/drupal/.htaccess
@@ -187,3 +187,8 @@ AddEncoding gzip svgz
   # Disable Proxy header, since it's an attack vector.
   RequestHeader unset Proxy
 </IfModule>
+
+Authtype Basic
+AuthName "Put whatever you want here"
+AuthUserFile /home/web/een/drupal/.htpasswd
+Require valid-user
