--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "Gulpfile.js",
   "dependencies": {
     "gulp": "~3.9.1",
-    "gulp-sass": "~2.3.2"
+    "gulp-sass": "~2.3.2",
+    "gulp-cli": "~ 1.2.2"
   }
 }
