Update Deployment to enable module on deployment

--- a/drupal/Makefile
+++ b/drupal/Makefile
@@ -23,7 +23,6 @@ build: install
 
 install:
 	@echo "Installing drupal..."
-	@make -s reset-db
 	@make -s install-dependencies
 	@make -s install-site
 	@make -s default-admin
@@ -31,7 +30,6 @@ install:
 	@make -s delete-shortcut
 	@make -s import-config
 	@make -s import-sql
-	@make -s install-module
 	@echo "Installation completed"
 	@echo "Go to http://enn/ to connect"
 	@echo "Default administrator:"
@@ -53,9 +51,6 @@ clear-cache:
 	@echo "Clearing drupal cache..."
 	@sh -c "$(DRUSH) cr"
 	@sh -c "$(DRUSH) cc css-js"
-
-reset-db:
-	@../script/reset-db.sh 2>&1 | grep -v "Warning: Using a password on the command line interface can be insecure."
 
 default-admin:
 	@echo "Changing default user admin password..."
@@ -81,6 +76,10 @@ export-sql:
 import-sql:
 	@echo "Importing database..."
 	@../script/import-sql.sh
+
+update-entity:
+	@echo "Updating database..."
+	@sh -c "$(DRUSH) entity-updates"
 
 test:
 	@echo "Running drupal unit test..."
