--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "gulp-cli": "~1.2.2",
     "gulp-cssmin": "~0.1.7",
     "gulp-rename": "~1.2.2",
-    "gulp-sass": "~2.3.2"
+    "gulp-sass": "~2.3.2",
+    "govuk-elements-sass": "~1.2.0",
+    "govuk_frontend_toolkit": "~4.14.1",
+    "govuk_template_mustache": "~0.18.0"
   }
 }
