EEN-57: Update drupal to handle elastic search

--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -18,3 +18,10 @@ opportunities.details:
    _controller: '\Drupal\opportunities\Controller\OpportunitiesController::details'
  requirements:
    _permission: 'access content'
+
+opportunities.ajax:
+ path: '/opportunities/ajax/{profileId}'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::ajax'
+ requirements:
+   _permission: 'access content'
