--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -5,7 +5,8 @@
     "license": "GPL-2.0+",
     "require": {
         "composer/installers": "^1.0.21",
-        "wikimedia/composer-merge-plugin": "~1.3"
+        "wikimedia/composer-merge-plugin": "~1.3",
+        "zendframework/zend-http": "^2.5"
     },
     "replace": {
         "drupal/core": "~8.3"
@@ -32,7 +33,10 @@
     },
     "autoload": {
         "psr-4": {
-            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer"
+            "Drupal\\Core\\Composer\\": "core/lib/Drupal/Core/Composer",
+            "Drupal\\Tests\\": "core/tests/Drupal/Tests",
+            "Drupal\\elastic_search\\": "modules/custom/elastic_search/src",
+            "Drupal\\opportunities\\": "modules/custom/opportunities/src"
         }
     },
     "scripts": {
