--- a/drupal/.htaccess
+++ b/drupal/.htaccess
@@ -69,6 +69,10 @@ AddEncoding gzip svgz
 <IfModule mod_rewrite.c>
   RewriteEngine on
 
+  RewriteCond %{HTTP_HOST} ^een\.int\.aerian\.com [NC]
+  RewriteCond %{SERVER_PORT} 80
+  RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+
   # Rewrite all govuk image url to the good location
   RewriteRule ^public/images/(.*)$ themes/custom/een/css/images/$1 [L]
 #  RewriteRule ^(.+)\.png $1\.svg [L]
