EEN-43: Add search by opportunity type + error message on form

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,5 @@ cache/
 /drupal/vendor
 drupal/modules/custom/elastic_search/config/install/elastic_search.settings.yml
 drupal/themes/custom/een/css/
+drupal/themes/custom/een/js/*-min.js
 html-coverage/
