EEN-82: Add form expression of interest

--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -8,13 +8,13 @@ opportunities.search:
 opportunities.details:
  path: '/opportunities/{profileId}'
  defaults:
-   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::details'
+   _controller: '\Drupal\opportunities\Controller\OpportunityController::index'
  requirements:
    _permission: 'access content'
 
-opportunities.ajax:
- path: '/opportunities/ajax/{profileId}'
+opportunities.eoi:
+ path: '/opportunities/eoi'
  defaults:
-   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::ajax'
+   _controller: '\Drupal\opportunities\Controller\OpportunityController::form'
  requirements:
    _permission: 'access content'
