--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "composer/installers": "^1.0.21",
         "wikimedia/composer-merge-plugin": "~1.3",
-        "zendframework/zend-http": "^2.5"
+        "zendframework/zend-http": "^2.5",
+        "twig/extensions": "^1.3"
     },
     "replace": {
         "drupal/core": "~8.3"
