--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
     "gulp-minify": "0.0.14"
+  },
+  "devDependencies": {
+    "gulp-watch": "~4.3.9"
   }
 }
