EEN-82: Adding phone field with correct javascript on eoi form

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ drupal/modules/custom/elastic_search/config/install/elastic_search.settings.yml
 drupal/themes/custom/een/css/
 drupal/themes/custom/een/js/*-min.js
 html-coverage/
+drupal/themes/custom/een/js/min/
