EEN-83: Adding flag library to the project

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ drupal/themes/custom/een/css/
 drupal/themes/custom/een/js/*-min.js
 html-coverage/
 drupal/themes/custom/een/js/min/
+drupal/themes/custom/een/flags/
