--- a/drupal/modules/custom/events/events.routing.yml
+++ b/drupal/modules/custom/events/events.routing.yml
@@ -1,6 +1,13 @@
-opportunities.search:
+events.search:
  path: '/events'
  defaults:
    _controller: '\Drupal\events\Controller\EventsController::index'
+ requirements:
+   _permission: 'access content'
+
+events.details:
+ path: '/events/{eventId}'
+ defaults:
+   _controller: '\Drupal\events\Controller\EventController::index'
  requirements:
    _permission: 'access content'
