--- a/drupal/themes/custom/een/een.libraries.yml
+++ b/drupal/themes/custom/een/een.libraries.yml
@@ -4,12 +4,7 @@ global-styling:
     theme:
       css/een.css: {}
   js:
-    js/min/govuk-template-min.js: {}
-    js/min/selection-buttons-min.js: {}
-    js/min/een-min.js: {}
+    js/dist/bundle.js: {}
+    # js/dist/bundle.js.map: {}
   dependencies:
     - core/jquery
-opportunity:
-  version: 1.0
-  js:
-    js/min/opportunity-min.js: {}
