--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "een",
   "main": "Gulpfile.js",
   "dependencies": {
-    "gulp": "~3.9.1",
-    "gulp-cli": "~1.2.2",
-    "gulp-sass": "~2.3.2",
+    "angular": "~1.5.8",
+    "flag-icon-css": "~2.4.0",
     "govuk-elements-sass": "~1.2.0",
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
+    "gulp": "~3.9.1",
+    "gulp-cli": "~1.2.2",
     "gulp-minify": "0.0.14",
-    "flag-icon-css": "~2.4.0"
+    "gulp-sass": "~2.3.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.14.0",
+    "gulp-babel": "6.1.2",
+    "gulp-concat": "2.6.0",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-watch": "~4.3.9"
   }
 }
