--- a/drupal/themes/custom/een/een.libraries.yml
+++ b/drupal/themes/custom/een/een.libraries.yml
@@ -2,9 +2,9 @@ global-styling:
   version: 1.0
   css:
     theme:
-      css/een.css: {}
+      dist/een.css: {}
   js:
-    js/dist/bundle.js: {}
+    dist/bundle.js: {}
     # js/dist/bundle.js.map: {}
   dependencies:
     - core/jquery
