Add font-awesome to project

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ drupal/themes/custom/een/js/*-min.js
 html-coverage/
 drupal/themes/custom/een/js/min/
 drupal/themes/custom/een/flags/
+/drupal/themes/custom/een/fonts/
