--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
     "gulp-minify": "0.0.14",
-    "flag-icon-css": "~2.4.0"
+    "flag-icon-css": "~2.4.0",
+    "font-awesome": "~4.6.3"
   },
   "devDependencies": {
     "gulp-watch": "~4.3.9"
