EEN-146: Adding clear countries functionnality

--- a/drupal/themes/custom/een/een.libraries.yml
+++ b/drupal/themes/custom/een/een.libraries.yml
@@ -15,4 +15,7 @@ opportunity:
   version: 1.0
   js:
     js/min/opportunity-min.js: {}
-
+opportunity-list:
+  version: 1.0
+  js:
+    js/min/opportunity-list-min.js: {}
