--- a/drupal/themes/custom/een/een.libraries.yml
+++ b/drupal/themes/custom/een/een.libraries.yml
@@ -15,6 +15,7 @@ opportunity:
   version: 1.0
   js:
     js/min/opportunity-min.js: {}
+    js/min/sticky-nav-min.js: {}
 opportunity-list:
   version: 1.0
   js:
