--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "dependencies": {
     "angular": "1.2.0",
     "flag-icon-css": "~2.4.0",
+    "font-awesome": "~4.6.3",
     "govuk-elements-sass": "~1.2.0",
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
     "gulp-minify": "0.0.14",
-    "flag-icon-css": "~2.4.0",
-    "font-awesome": "~4.6.3"
+    "jquery-deparam": "0.5.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "6.14.0",
