--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
     "gulp-minify": "0.0.14",
-    "jquery-deparam": "0.5.2"
+    "jquery": "1.12.4"
   },
   "devDependencies": {
     "babel-preset-es2015": "6.14.0",
