--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "govuk-elements-sass": "~1.2.0",
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
-    "gulp-minify": "0.0.14",
-    "jquery": "1.12.4"
+    "gulp-minify": "0.0.14"
   },
   "devDependencies": {
     "babel-preset-es2015": "6.14.0",
