commit work on sentence builder

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ cache/
 drupal/modules/custom/elastic_search/config/install/elastic_search.settings.yml
 html-coverage/
 drupal/themes/custom/een/dist
+/drupal/nbproject/private/
