--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -25,3 +25,10 @@ opportunities.details:
    _controller: '\Drupal\opportunities\Controller\OpportunityController::index'
  requirements:
    _permission: 'access content'
+   
+opportunities.explore:
+ path: '/explore-opportunities'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::exploreOpportunities'
+ requirements:
+   _permission: 'access content'
