--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "govuk-elements-sass": "~1.2.0",
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
-    "gulp-minify": "0.0.14"
+    "gulp-minify": "0.0.14",
+    "chosen-js": ""
   },
   "devDependencies": {
     "babel-preset-es2015": "6.14.0",
