EEN-215: Ajax Endpoint to get the result count of the opportunity search

--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -1,3 +1,10 @@
+opportunities.search.count:
+ path: '/opportunities/_count'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\OpportunitiesController::count'
+ requirements:
+   _permission: 'access content'
+
 opportunities.search:
  path: '/opportunities'
  defaults:
