EEN-216: Adding email verification endpoint and call to api + update templates

--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -27,12 +27,20 @@ opportunities.search.ajax:
    _permission: 'access content'
 
 opportunities.details:
- path: '/opportunities/{profileId}'
+ path: '/opportunities/{profileId}/{token}'
  defaults:
    _controller: '\Drupal\opportunities\Controller\OpportunityController::index'
+   token: null
  requirements:
    _permission: 'access content'
-   
+
+opportunities.details.ajax:
+ path: '/opportunities/{profileId}/_ajax'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\OpportunityController::ajax'
+ requirements:
+   _permission: 'access content'
+
 opportunities.search.temp:
  path: '/opportunities-temp'
  defaults:
