--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "font-awesome": "~4.6.3",
     "govuk-elements-sass": "~1.2.0",
     "govuk_frontend_toolkit": "~4.14.1",
-    "govuk_template_mustache": "~0.18.0",
+    "govuk_template_mustache": "~0.18.0"
   },
   "devDependencies": {
     "gulp": "~3.9.1",
