--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -41,6 +41,13 @@ opportunities.details.ajax:
  requirements:
    _permission: 'access content'
 
+opportunities.eoi.step1:
+ path: '/opportunities/{profileId}/step1'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\SignUpController::step1'
+ requirements:
+   _permission: 'access content'
+
 opportunities.search.temp:
  path: '/opportunities-temp'
  defaults:
