EEN-218: Adding Step3 to sign up journey

--- a/drupal/modules/custom/opportunities/opportunities.routing.yml
+++ b/drupal/modules/custom/opportunities/opportunities.routing.yml
@@ -55,6 +55,13 @@ opportunities.eoi.step2:
  requirements:
    _permission: 'access content'
 
+opportunities.eoi.step3:
+ path: '/opportunities/{profileId}/step3'
+ defaults:
+   _controller: '\Drupal\opportunities\Controller\SignUpController::step3'
+ requirements:
+   _permission: 'access content'
+
 opportunities.search.temp:
  path: '/opportunities-temp'
  defaults:
