Update Deployment script to not rebuild all locally each time. Update db sync to only sync if changes occurres.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ drupal/modules/custom/elastic_search/config/install/elastic_search.settings.yml
 html-coverage/
 drupal/themes/custom/een/dist
 /drupal/nbproject/private/
+compiled/
