--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "govuk-elements-sass": "~1.2.0",
     "govuk_frontend_toolkit": "~4.14.1",
     "govuk_template_mustache": "~0.18.0",
+    "gulp-minify": "0.0.14",
     "chosen-js": ""
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.14.0",
     "gulp": "~3.9.1",
-    "gulp-clean": "0.3.2",
+    "gulp-babel": "6.1.2",
     "gulp-cli": "~1.2.2",
     "gulp-concat": "2.6.0",
     "gulp-contrib-copy": "0.1.2",
+    "gulp-minify": "0.0.14",
     "gulp-sass": "~2.3.2",
-    "gulp-uglify": "2.0.0",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-watch": "~4.3.9"
   }
 }
